--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,19 @@
   height: 250px;
   border-radius: 0.3rem;
 }
+
+.name {
+  position: absolute;
+  margin-top: -70px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.name p {
+  font-size: large;
+  font-weight: 600;
+}
